--- a/output.css
+++ b/output.css
@@ -1341,8 +1341,6 @@ div:where(.swal2-icon).swal2-success.swal2-icon-show .swal2-success-circular-lin
   }
 }
 
-/* Import SweetAlert2 styles */
-
 *, ::before, ::after{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -1954,6 +1952,88 @@ label{
   }
 }
 
+.btn-base{
+  border-radius: 0.25rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  font-weight: 600
+}
+
+.btn-primary{
+  --tw-bg-opacity: 1;
+  background-color: rgb(132 165 157 / var(--tw-bg-opacity, 1));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1))
+}
+
+.btn-primary:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 136 128 / var(--tw-bg-opacity, 1))
+}
+
+.btn-secondary{
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 237 226 / var(--tw-bg-opacity, 1));
+  --tw-text-opacity: 1;
+  color: rgb(26 26 26 / var(--tw-text-opacity, 1))
+}
+
+.btn-secondary:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(231 217 206 / var(--tw-bg-opacity, 1))
+}
+
+.btn-danger{
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 132 130 / var(--tw-bg-opacity, 1));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1))
+}
+
+.btn-danger:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(217 101 99 / var(--tw-bg-opacity, 1))
+}
+
+.btn-yellow{
+  --tw-bg-opacity: 1;
+  background-color: rgb(246 189 96 / var(--tw-bg-opacity, 1));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1))
+}
+
+.btn-yellow:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(232 168 77 / var(--tw-bg-opacity, 1))
+}
+
+.input-base{
+  width: 100%;
+  border-radius: 0.375rem;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
+  padding: 0.5rem;
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
+}
+
+.input-base:focus{
+  --tw-border-opacity: 1;
+  border-color: rgb(59 130 246 / var(--tw-border-opacity, 1));
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity, 1))
+}
+
+.schedule-item label{
+  font-weight: 700
+}
+
 .fixed{
   position: fixed
 }
@@ -1964,6 +2044,10 @@ label{
 
 .inset-0{
   inset: 0px
+}
+
+.z-50{
+  z-index: 50
 }
 
 .mx-auto{
@@ -2190,16 +2274,6 @@ label{
   color: rgb(75 85 99 / var(--tw-text-opacity, 1))
 }
 
-.text-primary{
-  --tw-text-opacity: 1;
-  color: rgb(132 165 157 / var(--tw-text-opacity, 1))
-}
-
-.text-secondary{
-  --tw-text-opacity: 1;
-  color: rgb(247 237 226 / var(--tw-text-opacity, 1))
-}
-
 .opacity-25{
   opacity: 0.25
 }
@@ -2224,93 +2298,4 @@ label{
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow)
 }
 
-/* Custom Component Styles (using @apply) */
-
-.btn-base{
-  border-radius: 0.25rem;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  font-weight: 600
-  /* Base button styles */
-}
-
-.btn-primary{
-  --tw-bg-opacity: 1;
-  background-color: rgb(132 165 157 / var(--tw-bg-opacity, 1));
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1))
-}
-
-.btn-primary:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 136 128 / var(--tw-bg-opacity, 1))
-}
-
-.btn-secondary{
-  --tw-bg-opacity: 1;
-  background-color: rgb(247 237 226 / var(--tw-bg-opacity, 1));
-  --tw-text-opacity: 1;
-  color: rgb(26 26 26 / var(--tw-text-opacity, 1))
-}
-
-.btn-secondary:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(231 217 206 / var(--tw-bg-opacity, 1))
-}
-
-.btn-danger{
-  --tw-bg-opacity: 1;
-  background-color: rgb(242 132 130 / var(--tw-bg-opacity, 1));
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1))
-}
-
-.btn-danger:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(217 101 99 / var(--tw-bg-opacity, 1))
-}
-
-.btn-yellow{
-  --tw-bg-opacity: 1;
-  background-color: rgb(246 189 96 / var(--tw-bg-opacity, 1));
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1))
-}
-
-.btn-yellow:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(232 168 77 / var(--tw-bg-opacity, 1))
-}
-
-.input-base{
-  width: 100%;
-  border-radius: 0.375rem;
-  border-width: 1px;
-  --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
-  padding: 0.5rem;
-  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
-}
-
-.input-base:focus{
-  --tw-border-opacity: 1;
-  border-color: rgb(59 130 246 / var(--tw-border-opacity, 1));
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity, 1))
-}
-
-.input-base {
-  /* Keep focus styles */
-}
-
-/* Schedule item label styling */
-
-.schedule-item label{
-  font-weight: 700
-}
+/* --- CORRECTED: Use @layer components --- */
