--- a/output.css
+++ b/output.css
@@ -1897,7 +1897,7 @@ video {
 
 body{
   --tw-bg-opacity: 1;
-  background-color: rgb(247 237 226 / var(--tw-bg-opacity, 1))
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity, 1))
 }
 
 h1{
@@ -2111,6 +2111,10 @@ label{
   max-height: 80vh
 }
 
+.min-h-screen{
+  min-height: 100vh
+}
+
 .w-5{
   width: 1.25rem
 }
@@ -2207,6 +2211,11 @@ label{
   background-color: rgb(75 85 99 / var(--tw-bg-opacity, 1))
 }
 
+.bg-secondary{
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 237 226 / var(--tw-bg-opacity, 1))
+}
+
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1))
@@ -2297,5 +2306,3 @@ label{
 .filter{
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow)
 }
-
-/* --- CORRECTED: Use @layer components --- */
